# AoC

./: Readme.MD
2023/: .gitignore  .ignore  Cargo.toml  benchmarks.txt  get_input.py  justfile  rankings.txt
2023/day_01/: Cargo.toml  problem_text
2023/day_01/benches/: benchmarks-criterion.rs
2023/day_01/src/: part1.rs  part2.rs
2023/day_02/: Cargo.toml  problem_text
2023/day_02/benches/: benchmarks-criterion.rs
2023/day_02/src/: part1.rs  part2.rs
2023/day_03/: Cargo.toml  problem_text
2023/day_03/benches/: benchmarks-criterion.rs
2023/day_03/src/: part1.rs  part2.rs
2023/day_04/: Cargo.toml  problem_text
2023/day_04/benches/: benchmarks-criterion.rs
2023/day_04/src/: part1.rs  (+1 more)
2023/day_05/: Cargo.toml  problem_text
2023/day_06/: Cargo.toml  problem_text
2023/day_07/: problem_text
2023/day_08/: Cargo.toml  problem_text
2023/day_09/: Cargo.toml  problem_text
2023/day_10/: Cargo.toml
2023/day_11/: Cargo.toml  problem_text
2023/day_12/: Cargo.toml
2023/day_15/: problem_text
2024/: Cargo.toml  get_input.py  justfile
2024/daily-template/: Cargo.toml
2024/day_01/: Cargo.toml
2024/day_03/: Cargo.toml
2024/day_04/: Cargo.toml
2024/day_04/src/: part1.rs  part2.rs
2024/day_07/: Cargo.toml
2024/day_08/: Cargo.toml
2024/day_09/: Cargo.toml
2024/day_10/: Cargo.toml
2024/day_11/: Cargo.toml
2024/day_13/: Cargo.toml
2024/day_14/: Cargo.toml
2024/day_15/: Cargo.toml  inputp2.txt
2024/day_17/: Cargo.toml
2024/day_18/: Cargo.toml
2024/day_23/: Cargo.toml
2024/day_24/: Cargo.toml
2024/day_25/: Cargo.toml
(+92 files in other folders)
